tests/baselines/reference/enumGenericTypeClash.errors.txt
==== tests/cases/compiler/enumGenericTypeClash.ts (1 errors) ====
    class X<A,B,C> { }
    enum X { MyVal }
         ~
!!! enumGenericTypeClash.ts(2,6): error TS2000: Duplicate identifier 'X'. Additional locations:
!!! 	enumGenericTypeClash.ts(1,1)
    